# ur_moveit_hri

./: .gitignore  .gitmodules  README.md
gripper_description/: CMakeLists.txt  package.xml
gripper_description/launch/: view_gripper.launch.py
gripper_description/scripts/: gripper_controller.py  open1.script  open2.script
gripper_description/urdf/: full_gripper.urdf.xacro  soft_robotics_gripper.xacro
main_simulation/: CMakeLists.txt  package.xml
main_simulation/config/: controllers_ur3.yaml  controllers_ur5.yaml  joint_limits.yaml  joint_limits_ur3.yaml  joint_limits_ur5.yaml  kinematics.yaml  ompl_planning_ur3.yaml  ompl_planning_ur5.yaml  ur3_controllers.yaml  ur3_servo.yaml  ur5_controllers.yaml  ur5_servo.yaml
main_simulation/config/ur3e/: ur3e_update_rate.yaml  ur_controllers.yaml
main_simulation/config/ur5e/: ur5e_update_rate.yaml  ur_controllers.yaml
main_simulation/launch/: ur3_control.launch.py  ur_control.launch.py  ur_moveit.launch.py  ur_sim_control.launch.py  ur_sim_moveit.launch.py  view_ur.launch.py
main_simulation/rviz/: view_robot_moveit.rviz  view_robot_moveit_ur3.rviz
main_simulation/scripts/: gripper_controller.py  open3.script  policy.py  publisher_test.py
main_simulation/src/: add_collision_objects.cpp  example_motion.cpp  motion_node.cpp
main_simulation/srdf/: ur.srdf.xacro  ur3.srdf.xacro  ur5.srdf.xacro  ur_macro.srdf.xacro
main_simulation/urdf/: ur.urdf.xacro  ur3.urdf.xacro  ur5.urdf.xacro
main_simulation/worlds/: lab.world  screenshot.world
